Completed the Testimonial Section and Fixed a navbar bug of background color on small devices

--- a/app/assets/styles/modules/_navbar.css
+++ b/app/assets/styles/modules/_navbar.css
@@ -1,6 +1,8 @@
 .custom-nav{
     background-color: $navbarBg;
-    opacity: 0.8;
+    opacity: 1;
+    height: 60px;
+    padding: 5px;
 }
 #navbarNav{
     ul li a{
@@ -18,6 +20,11 @@
 }
 
 @media (max-width: 576px){
+
+}
+
+/* for smartphones */
+@media (min-width: 320px) and (max-width: 480px){
     .logo{
         width: 150px;
     }
@@ -25,6 +32,29 @@
         height: 50vh;
     }
     .custom-nav{
-        opacity: 0.5;
+        opacity: 1;
+    }
+    #navbarNav{
+        background: #000;
+        padding:5px;
+        opacity: 0.9;
+    }
+}
+
+/* for tablets */
+@media (min-width: 768px) and (max-width: 1024px){
+    .logo{
+        width: 150px;
+    }
+    .carousel-inner img{
+        height: 50vh;
+    }
+    .custom-nav{
+        opacity: 1;
+    }
+    #navbarNav{
+        background: #000;
+        padding:5px;
+        opacity: 0.9;
     }
 }
