--- a/app/assets/styles/modules/_slider.css
+++ b/app/assets/styles/modules/_slider.css
@@ -1,7 +1,7 @@
 .slider-section{
     &__overlay{
         position: absolute;
-        background: linear-gradient(to bottom right, rgba(0,0,0,1), rgba(0,0,0,0));
+        background: linear-gradient(to bottom right, rgba(0,0,0,1), rgba(0,0,0,0.5));
         top: 0;
         left: 0;
         height: 100%;
