--- a/app/assets/styles/modules/_testimonial.css
+++ b/app/assets/styles/modules/_testimonial.css
@@ -1,13 +1,70 @@
 .testimonial-section{
     background-image: url('../../assets/images/testimonial-bg.png');
-    min-height: 500px;
-    border: 1px solid red;
+    min-height: 680px;
 
     &__bg{
         background-color: $testimonialBg;
-        height: 400px;
-        border: 4px solid black;
-        margin-top: 100px;
-        margin-bottom: 100px;
+        min-height:680px;
+        width: 75%;
+        margin: auto;
+        opacity: 0.7;
+    }
+
+    &__header{
+        text-align: center;
+        color: #fff;
+
+        h1{
+            margin-bottom: 10px;
+        }
+    }
+
+    &__img-content{
+        color: #fff;
+        text-align:center;
+        margin-top: -20px;
+        img{
+            height: 120px;
+            width: 120px;
+            margin: 0;
+            padding: 0;
+        }
+         h2{
+             color: $teamNameClr;
+         }
+         h4{
+             font-size: 1.25rem;
+             span{
+                 font-style: italic;
+             }
+         }
+
+        p{
+            width: 60%;
+            margin:auto;
+            text-align:justify;
+            margin-top: 40px;
+        }
+    }
+}
+
+.carousel-indicators{
+    top: 110%;
+}
+
+/* for smartphones */
+@media (min-width: 320px) and (max-width: 480px){
+    .testimonial-section,.testimonial-section__bg{
+        height: 900px;
+    }
+    .carousel-indicators{
+        top: 102%;
+    }
+}
+
+/* for tablets */
+@media (min-width: 768px) and (max-width: 1024px){
+    .carousel-indicators{
+        top: 105%;
     }
 }
